# unirna_app

./: .gitignore  .gitlab-ci.yml  dev.md  download_checkpoints.sh  license  pyproject.toml  readme.md
example/acceptor/: input.fasta
example/apa/: input.fasta
example/donor/: input.fasta
example/drugrank/: fse_vs_chemdiv.csv  test.fasta
example/extract_embedding/: input.fasta
example/lncrna_sublocalization/: input.fasta
example/m6a/: input.fasta
example/pirna/: input.fasta
example/unirna_ss/: RNAStralign.fasta  archiveII.fasta  core_test.fasta  input.fasta
example/utr/: input.fasta
example/utr/outputs/: result.csv
rna_app/: pages.py  run_infer.py
rna_app/apps/: acceptor.py  donor.py  lncrna_sublocalization.py  rna_ss.py
rna_app/bohr/: acceptor_bohr.py  donor_bohr.py  extract_embedding_bohr.py  lncrna_sublocalization_bohr.py  m6a_bohr.py  pirna_bohr.py  rna_ss_bohr.py  utr_bohr.py  utr_launching.py
rna_app/core/: acceptor.py  apa.py  donor.py  drugrank.py  extract_embedding.py  extract_embedding_launching.py  lncrna_sublocalization.py  m6a.py  pirna.py  rna_ss.py  seq_generator.py  seq_optimization.py  utils.py  utr.py
rna_app/dash/: main_page.py
rna_app/dash/assets/: tRNA_meta_data.xlsx
rna_app/dash/collections/: alerts.py  notifications.py  utils.py
rna_app/dash/pages/: apa.py  apps.py  authors.json  config.json  config.json.bk  contact.py  drugrank.py  extract_embedding.py  license.py  lncrna_sublocalization.py  m6a.py  main_layout.py  pirna.py  rna_ss.py  seq_optimization.py  splice_site.py  utils.py  utr.py
rna_app/pages/: alerts.py
src/unirna_api/: auth.db  tasks.db
tests/: test_core.py  test_embedding.py  test_missions.py
